lex-reporter/force-app/main/default/objects/Table_View__c/Table_View__c.object-meta.xml
<CustomObject>
    <description>Keeps table state from the end user&apos;s last Lightning Reporter view so that the application can provide analysis on what has changed between the last view and the same table&apos;s current state</description>
    <label>Table View</label>
    <nameField>
        <label>Table View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>