lex-reporter/force-app/main/default/objects/Table_View__c/fields/Context_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Id__c</fullName>
    <inlineHelpText>Id of record through which the Lightning Reporter was viewed</inlineHelpText>
    <label>Context Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>