lex-reporter/force-app/main/default/objects/Table_View__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <inlineHelpText>The SObject name of the records in the view</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>