lex-reporter/force-app/main/default/objects/Table_View__c/fields/Skinny_State__c.field-meta.xml
<CustomField>
    <fullName>Skinny_State__c</fullName>
    <label>Skinny State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>