lex-reporter/force-app/main/default/objects/Table_View__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Includes all columns configured for this user for this view in the Lightning Reporter</inlineHelpText>
    <label>State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>