lex-reporter/force-app/main/default/objects/Table_View__c/fields/Viewer__c.field-meta.xml
<CustomField>
    <fullName>Viewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Viewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Table_Views</relationshipName>
    <type>Lookup</type>
</CustomField>